turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:7: error: not found: value color
	var nextState = rule(state)(color)(0);
                                    ^